--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cap-js/sqlite": "^1"
   },
   "scripts": {
-    "start": "cds-serve"
+    "start": "cds run --in-memory?",
+    "build": "cds build"
   }
 }
