--- a/cds.env
+++ b/cds.env
@@ -1,8 +1,21 @@
 cds:
   requires:
     db:
-      kind: "sqlite"
-features:
+      kind: sqlite           # Use 'sqlite' for local or in-memory DB
+      # For PostgreSQL, replace 'sqlite' with 'postgres'
+      # Uncomment and configure the following if using PostgreSQL on Render:
+      # kind: postgres
+      # credentials:
+      #   host: ${POSTGRES_HOST}
+      #   port: ${POSTGRES_PORT}
+      #   database: ${POSTGRES_DATABASE}
+      #   user: ${POSTGRES_USER}
+      #   password: ${POSTGRES_PASSWORD}
+
+  features:
     fiori_preview: true
-  "fiori-preview":
-    entities: all
+    preview: true
+
+  # If not using authentication, you can disable it to avoid requiring @sap/xssec
+  auth:
+    kind: dummy               # Use 'dummy' to avoid loading @sap/xssec
