--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "dependencies": {
     "@sap/cds": "^8.4.2",
+    "@sap/xssec": "^4.2.7",
     "express": "^4",
     "sqlite3": "^5.1.7"
   },
