config init preview

--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
         "kind": "dummy"
       }
     },
-    "features": {
-      "fiori_preview": true,
+    "fiori": {
       "preview": true
+    },
+    "server": {
+      "index": true
     }
   }
 }
